Updated loginServlet to return success, clean code

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <body>
 <!--<p><a href="holdings?person_id=1">Get Holdings</a></p>-->
 <div class="holdings">
-    <p>Please LOGIN to your DASHBOARD:</p>
+    <p>Please LOGIN to your DASHBOARD test:</p>
     <form action="login" method="post">
         User name : <input type="text" name="uname"><br><br>
         Password  : <input type="password" name="pass"><br><br>
